--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,39 @@
 version: '3.8'
 
 services:
-  web:
+  app:
     build: .
     ports:
-      - "5000:5000"
+      - "10000:10000"
     environment:
-      - FLASK_ENV=development
       - DEBUG=True
-      - PORT=5000
+      - PORT=10000
+      - EMAIL_USER=jodjack64@gmail.com
+      - EMAIL_PASS=${EMAIL_PASS}
+      - REDIS_URL=redis://redis:6379/0
     volumes:
       - ./downloads:/app/downloads
+      - ./temp:/app/temp
       - ./logs:/app/logs
     depends_on:
       - redis
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:10000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   redis:
     image: redis:7-alpine
     ports:
       - "6379:6379"
-    volumes:
-      - redis_data:/data
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
   nginx:
     image: nginx:alpine
@@ -31,10 +42,12 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
-      - ./ssl:/etc/ssl/certs
+      - ./ssl:/etc/ssl
     depends_on:
-      - web
+      - app
     restart: unless-stopped
 
 volumes:
-  redis_data:
+  downloads:
+  temp:
+  logs:
