--- a/.env
+++ b/.env
@@ -1,21 +1,11 @@
-# Flask app/security
+EMAIL_USER=jodjack64@gmail.com
+EMAIL_PASS=estjmcvxzsaqaxyt
 SECRET_KEY=jack@X09
-
-# Email integration (optional, contact/feedback के लिए)
-EMAIL_USER=your@email.com
-EMAIL_PASS=your-email-app-password
-SMTP_SERVER=smtp.gmail.com
-SMTP_PORT=587
-
-# App settings
 PORT=10000
 DEBUG=False
-
-# (Optional) rate limiting/security
+SMTP_SERVER=smtp.gmail.com
+SMTP_PORT=587
 API_RATE_LIMIT=50 per minute
 DOWNLOAD_RATE_LIMIT=10 per minute
 CSRF_ENABLED=True
 SESSION_COOKIE_SECURE=True
-
-# (अगर Redis use कर रहे तो)
-# REDIS_URL=redis://localhost:6379/0
